[project]
name = "flex-bd"
version = "1.0.0"

description = "Flex command for Ballsdex v3 - submit your MarketDex items for moderator approval and showcase."
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "arielaram", email = "arielaram@nationdex.com" },
]
readme = "README.md"
requires-python = ">=3.14"
# dependencies = [
#     "ballsdex>=3.0.0",
# ]

[project.urls]
Repository = "https://github.com/arielaram/Flex-BD"
Documentation = "https://github.com/arielaram/Flex-BD#readme"
Issues = "https://github.com/arielaram/Flex-BD/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flex_app"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]
