[project]
name = "museum-bd"
version = "1.0.0"

description = "A museum display extra package for Ballsdex v3 — showcase your favorite cards."
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "arielaram", email = "arielaram@nationdex.com" },
]
readme = "README.md"
requires-python = ">=3.14"
# dependencies = [
#     "ballsdex>=3.0.0",
# ]

[project.urls]
Repository = "https://github.com/arielaram/Museum-BD"
Documentation = "https://github.com/arielaram/Museum-BD#readme"
Issues = "https://github.com/arielaram/Museum-BD/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["museum_app"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]
